k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  rules:
  - host: my-app.local
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: idp-svc
            port: 
              number: 8080

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gateway-svc
            port: 
              number: 8080

      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-svc
            port: 
              number: 80
